2007-10-06  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: various improvements

2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_RelationView.py: don't crash on missing media ref
	* src/DisplayTabs/_GalleryTab.py: on missing media ref, notify to run check tool
	* src/plugins/Check.py: add code to remove missing media ref in person,
	family, event, place, source.

2007-10-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_GalleryTab.py (build_interface): Create custom cell
	renderer for labels for better control.

2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DisplayTabs/_GalleryTab.py: remove bug that leads to database corruption,
	if media is deleted in mediaview, remove media in all open gallery tabs

2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadGedcom.py: issue #1169, wrong GEDCOM parse ADDR

2007-10-05 James G. Sack <jgsack@san.rr.com>
	* src/GrampsDb/_GrampsDbBase.py:
	* src/GrampsDb/_GrampsGEDDB.py:
	* src/GrampsDb/_GrampsXMLDB.py:
	* src/GrampsDb/_GrampsInMemDB.py:
	* src/Bookmarks.py:
	issue #1261: creating bookmark does not lead to save of xml

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/plugins/Check.py: add remove empty objects. This needs testing...

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: copy bookmark list, don't reference
	* src/GrampsDb/_ReadXML.py: only add bookmarks if not present already, #1187

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Spell.py: add gtkspell bug workaround, see eg issue 1272, 1091, ...

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/PageView.py: correct bug not going to bookmark if no active person
	* src/DataViews/_MediaView.py:
	* src/DataViews/_RepositoryView.py:
	* src/DataViews/_SourceView.py:
	* src/DataViews/_EventView.py: