@@ -1,3 +1,6 @@
+2007-10-07  Gary Burton <gary.burton@zen.co.uk>
+	* src/PageView.py: sort column retains filter value, issue #507
+
 2007-10-06  Douglas Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: various improvements
 
